# gallery

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  build.sh  index.py  minify.py  pyproject.toml  requirements.txt  search.py  setupenv.sh  sigal.conf.py
.github/workflows/: ci.yaml  docker.yml
resources/: convert.py  imagemagick_policy.xml  minify.py
src/gallery/: __main__.py  albums.py  caching.py  config.py  index.py  server.py  util.py
src/gallery/data/theme/static/: app.min.js  photoswipe-ui-default.js  photoswipe-ui-default.min.js  photoswipe.min.js  styles.css
src/gallery/data/theme/templates/: album.html  album_edit.html  album_edit_medias.html  analytics.html  base.html  breadcrumb.html  error.html  footer.html  header.html  links.html  media_edit.html  search.html
src/gallery/editor/: server.py
tests/: test_caching.py  test_util.py
theme/static/: app.js  styles.css
theme/templates/: album_list.html  base.html  breadcrumb.html  footer.html  header.html  search.html
